fix display scale on mobile

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -41,6 +41,7 @@ footer {
 /* home page tab view */
 .tab-view {
   margin-top: 7%;
+  width: 100%;
 }
 
 .tab {
@@ -243,7 +244,7 @@ footer {
 .post {
   background-color: #fff;
   border-radius: 5px;
-  margin: 10px 40px;
+  margin: 10px 5%;
   position: relative;
 }
 
